--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "scripts": {
+    "dev": "nodemon --watch src --watch package.json --ext js,ts,json --ignore node_modules --ignore public --ignore dist src/server/server.ts"
+  },
   "dependencies": {
     "@types/express": "^5.0.0",
     "axios": "^1.7.9",
+    "cors": "^2.8.5",
     "express": "^4.21.2",
     "jest": "^29.7.0",
     "nodemon": "^3.1.9",
@@ -17,6 +21,7 @@
     "typescript": "^5.7.3"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.14",
     "ts-jest": "^29.2.5"
   }
