--- a/package.json
+++ b/package.json
@@ -7,22 +7,24 @@
   "license": "ISC",
   "description": "",
   "scripts": {
-    "dev": "nodemon --watch src --watch package.json --ext js,ts,json --ignore node_modules --ignore public --ignore dist src/server/server.ts"
+    "dev": "nodemon --watch src --watch package.json --ext js,ts,json --ignore node_modules --ignore public --ignore dist src/server/server.ts",
+    "start:test": "ts-node src/server/server.ts"
   },
   "dependencies": {
     "@types/express": "^5.0.0",
     "axios": "^1.7.9",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jest": "^29.7.0",
-    "nodemon": "^3.1.9",
-    "pg-promise": "^11.10.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "pg-promise": "^11.10.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/jest": "^29.5.14",
-    "ts-jest": "^29.2.5"
+    "dotenv": "^16.5.0",
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.10",
+    "ts-jest": "^29.3.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
