--- a/.github/workflows/ci-back-pull-request.yml
+++ b/.github/workflows/ci-back-pull-request.yml
@@ -20,7 +20,7 @@ jobs:
           POSTGRES_USER: ${{ secrets.POSTGRES_USER }}
           POSTGRES_PASSWORD: ${{ secrets.POSTGRES_PASSWORD }}
         run: |
-          docker compose -f back-end/docker-compose.ci.yml up --build --abort-on-container-exit
+          docker compose -f docker-compose.ci.yml up --build --abort-on-container-exit
 
       - name: Ver logs do container
         if: failure()
