feat: add docker compose for builds ambientes

--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -38,7 +38,7 @@ services:
     tmpfs:
       - /var/lib/postgresql/data
     volumes:
-      - ./create.test.sql:/docker-entrypoint-initdb.d/create.test.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - test-network
 
