--- a/.github/workflows/ci-back-pull-request.yml
+++ b/.github/workflows/ci-back-pull-request.yml
@@ -3,7 +3,7 @@ name: CI - backend tests pull
 on:
   pull_request:
     paths: 
-      - 'src/**'
+      - 'src/*'
     branches: 
       - develop
       - main
