--- a/.github/workflows/ci-back-pull-request.yml
+++ b/.github/workflows/ci-back-pull-request.yml
@@ -5,8 +5,8 @@ on:
     branches: 
       - develop
       - main
-    paths:
-      - 'src/**'
+    # paths:
+    #   - 'src/**'
 
 jobs:
   back_end_tests_pull:
