--- a/docker-compose.ci.yml
+++ b/docker-compose.ci.yml
@@ -1,7 +1,7 @@
 services:
-  api:
+  app-node:
     build: ./
-    container_name: api
+    container_name: app-node
     environment: 
       PORT: 3000
       DATABASE_URL: ${DATABASE_URL}
@@ -22,9 +22,9 @@ services:
       DATABASE_URL: ${DATABASE_URL}
       SKIP_DOTENV: true
     depends_on:
-      - api
+      - app-node
       - db-test
-    entrypoint: ["bash", "-c", "./wait-for-it.sh api 3000 -- npm run test"]
+    entrypoint: ["bash", "-c", "./wait-for-it.sh app-node 3000 -- npm run test"]
     networks:
       - test-network
 
@@ -38,7 +38,7 @@ services:
     tmpfs:
       - /var/lib/postgresql/data
     volumes:
-      - ./create.test.sql:/docker-entrypoint-initdb.d/create.test.sql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
     networks:
       - test-network
 
